--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: juhuck <juhuck@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/13 11:48:04 by jhuck             #+#    #+#              #
-#    Updated: 2025/08/02 12:33:44 by juhuck           ###   ########.fr        #
+#    Updated: 2025/08/04 13:43:47 by juhuck           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -60,11 +60,11 @@ OBJ				= $(addprefix $(OBJ_DIR)/, $(SRC_FILES:.c=.o))
 # ─── Rules ────────────────────────────────────────────────────────────────────
 all: $(NAME)
 
-$(NAME): $(OBJ)
+$(NAME): $(OBJ) Makefile
 	@echo "📦 Archiving $@"
 	@$(AR) $@ $^
 
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c Makefile
 	@$(MKDIR_P) $(@D)
 	@echo "🔧 Compiling $<"
 	@$(CC) $(CFLAGS) -I$(INC) -c $< -o $@
